Dept. name changed

--- a/BAU_Thesis_Template/main.tex
+++ b/BAU_Thesis_Template/main.tex
@@ -28,7 +28,7 @@
 \newcommand{\DeptHead}{Prof. Dr. Md. Parvez Anwar}
 
 \newcommand{\DeptName}{Department of Agronomy} % Dept or Institute Name
-\newcommand{\DegreeIn}{Soil Science}
+\newcommand{\DegreeIn}{Agronomy}
 
 
 \providecommand\DegreeName{1} % 1 = Master of Science, 2 = Doctor of Philosopy
